--- a/index.html
+++ b/index.html
@@ -7,14 +7,21 @@
   <title>Testing the News Web Component</title>
   <base href="/">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <style type="text/css">
+    body {
+      font-family: Roboto, "Helvetica Neue", sans-serif;
+    }
+  </style>
 
-  <!--  <link rel="stylesheet" href="./dist/build/wc-prescription-details.css">-->
-  <link rel="stylesheet" href="./dist/build/wc-list-prescriptions.css">
-  <script src="./dist/wc-prescription-details/browser/keycloak.js"></script>
+<!--    <link rel="stylesheet" href="./dist/build/wc-prescription-details.css">-->
+<!--  <link rel="stylesheet" href="./dist/build/wc-list-prescriptions.css">-->
+  <link rel="stylesheet" href="./dist/build/wc-create-prescription.css">
+
+  <script src="./dist/wc-create-prescription/browser/keycloak.js"></script>
 </head>
 <body>
 <script>
-  window.referralPrescriptionEnv = 'test';
+  window.referralPrescriptionEnv = 'local';
   var keycloak = new Keycloak({
     url: 'http://vasiam.test.paas.vasdc.be/auth',
     realm: 'MOOSE_UHMEP',
@@ -22,27 +29,40 @@
   });
   keycloak.init({onLoad: 'login-required', checkLoginIframe: false}).then(function (authenticated) {
     console.log(authenticated ? 'authenticated' : 'not authenticated');
-    // const create = document.createElement('nihdi-referral-prescription-details');
-    // create.lang = navigator.language.includes('nl') || navigator.language.includes('fr') ? navigator.language : 'nl-BE';
-    // create.prescriptionId = '4aeabaf9-7979-434e-b0d7-b31e1acab773';
-    // create.getToken = () => Promise.resolve(keycloak.token);
-    // document.body.append(create);
-    const listElement = document.createElement('nihdi-list-referral-prescriptions');
-    listElement.lang = navigator.language.includes('nl') || navigator.language.includes('fr') ? navigator.language : 'nl-BE';
-    listElement.patientSsin = '90122712173';
-    listElement.getToken = () => Promise.resolve(keycloak.token);
-    listElement.addEventListener('prescriptionsCreated', () => {
-      document.body.removeChild(listElement);
+    // const details = document.createElement('nihdi-referral-prescription-details');
+    // details.lang = navigator.language.includes('nl') || navigator.language.includes('fr') ? navigator.language : 'nl-BE';
+    // details.prescriptionId = '7385d7b3-b883-435e-bfee-917f81ccda6e';
+    // details.getToken = () => Promise.resolve(keycloak.token);
+    // document.body.append(details);
+    // const listElement = document.createElement('nihdi-list-referral-prescriptions');
+    // listElement.lang = navigator.language.includes('nl') || navigator.language.includes('fr') ? navigator.language : 'nl-BE';
+    // listElement.patientSsin = '90122712173';
+    // listElement.getToken = () => Promise.resolve(keycloak.token);
+    // listElement.addEventListener('prescriptionsCreated', () => {
+    //   document.body.removeChild(listElement);
+    //   setTimeout(() => {
+    //     alert('Prescription(s) were created. Refresh to start again.');
+    //   }, 100);
+    // });
+    // document.body.append(listElement);
+    const create = document.createElement('nihdi-create-referral-prescription');
+    create.lang = navigator.language.includes('nl') || navigator.language.includes('fr') ? navigator.language : 'nl-BE';
+    create.patientSsin = '43100101456';
+    create.getToken = () => Promise.resolve(keycloak.token);
+    create.addEventListener('prescriptionsCreated', () => {
+      document.body.removeChild(create);
       setTimeout(() => {
         alert('Prescription(s) were created. Refresh to start again.');
       }, 100);
     });
-    document.body.append(listElement);
+    document.body.append(create);
   }).catch(function () {
     alert('failed to initialize');
   });
 </script>
 
-<script src="./dist/build/wc-list-prescriptions.js" type="module"></script>
+<!--<script src="./dist/build/wc-prescription-details.js" type="module"></script>-->
+<!--<script src="./dist/build/wc-list-prescriptions.js" type="module"></script>-->
+<script src="./dist/build/wc-create-prescription.js" type="module"></script>
 </body>
 </html>
