update vite config to include evf files

--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
   <title>Testing the News Web Component</title>
   <base href="/">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <style type="text/css">
+  <style>
     body {
       font-family: Roboto, "Helvetica Neue", sans-serif;
     }
   </style>
 
-<!--    <link rel="stylesheet" href="./dist/build/wc-prescription-details.css">-->
-<!--  <link rel="stylesheet" href="./dist/build/wc-list-prescriptions.css">-->
-  <link rel="stylesheet" href="./dist/build/wc-create-prescription.css">
+<!--    <link rel="stylesheet" href="./dist/wc-prescription-details/build/wc-prescription-details.css">-->
+<!--  <link rel="stylesheet" href="./dist/wc-list-prescriptions/build/wc-list-prescriptions.css">-->
+  <link rel="stylesheet" href="./dist/wc-create-prescription/build/wc-create-prescription.css">
 
-  <script src="./dist/wc-create-prescription/browser/keycloak.js"></script>
+  <script src="./dist/wc-create-prescription/build/keycloak.js"></script>
 </head>
 <body>
 <script>
@@ -61,8 +61,8 @@
   });
 </script>
 
-<!--<script src="./dist/build/wc-prescription-details.js" type="module"></script>-->
-<!--<script src="./dist/build/wc-list-prescriptions.js" type="module"></script>-->
-<script src="./dist/build/wc-create-prescription.js" type="module"></script>
+<!--<script src="./dist/wc-prescription-details/build/wc-prescription-details.js" type="module"></script>-->
+<!--<script src="./dist/wc-list-prescriptions/build/wc-list-prescriptions.js" type="module"></script>-->
+<script src="./dist/wc-create-prescription/build/wc-create-prescription.js" type="module"></script>
 </body>
 </html>
