change language operator

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Creation of the custom element -->
     const create = document.createElement('nihdi-create-referral-prescription');
     <!-- Input for the language -->
-    create.lang = navigator.language.includes('fr') || navigator.language.includes('fr') ? navigator.language : 'fr-BE';
+    create.lang = navigator.language.includes('nl') || navigator.language.includes('fr') ? navigator.language : 'fr-BE';
     <!-- Input for the patient SSIN -->
     create.patientSsin = '43100101456';
     <!-- Callback method to get a token for the authentication library -->
