--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   <!-- Initialization of the authentication library -->
   var keycloak = new Keycloak({
     url: 'https://api-acpt.ehealth.fgov.be/auth',
-    realm: 'healthcare',
-    clientId: 'nihdi-uhmep-hcp-dev'
+    realm: '--put-you-realm-here--',
+    clientId: `--put-you-client-id-here--`
   });
   keycloak.init({onLoad: 'login-required', checkLoginIframe: false}).then(function (authenticated) {
     console.log(authenticated ? 'authenticated' : 'not authenticated');
@@ -31,6 +31,7 @@
     const create = document.createElement('nihdi-referral-prescription-create');
     <!-- Input for the language -->
     create.lang = navigator.language.includes('nl') || navigator.language.includes('fr') ? navigator.language : 'fr-BE';
+    create.intent = 'order';
     <!-- Input for the patient SSIN -->
     create.patientSsin = '43100101456';
     <!-- Callback method to get a token for the authentication library -->
