--- a/reuse/code/dialogs/assign-prescription/assign-prescription.dialog.html
+++ b/reuse/code/dialogs/assign-prescription/assign-prescription.dialog.html
@@ -42,7 +42,7 @@
         <mat-chip-grid #chipList formControlName="cities">
           <mat-chip-row data-cy="prescription-selected-city" *ngFor="let city of formGroup.get('cities')!.value" [value]="city" (removed)="removeCity(city)">
             {{city.zipCode}} - {{city.cityName | translation}}
-            <button data-cy="prescription-selected-city-remove" matChipRemove>
+            <button data-cy="prescription-selected-city-remove" matChipRemove [attr.aria-label]="'prescription.ariaLabel.removeCity' | translate">
               <mat-icon>cancel</mat-icon>
             </button>
           </mat-chip-row>
