--- a/index.html
+++ b/index.html
@@ -27,13 +27,16 @@
   });
   keycloak.init({onLoad: 'login-required', checkLoginIframe: false}).then(function (authenticated) {
     console.log(authenticated ? 'authenticated' : 'not authenticated');
+    const params = new URLSearchParams(window.location.search);
     <!-- Creation of the custom element -->
     const create = document.createElement('nihdi-referral-prescription-create');
+    params.forEach((value, key) => {
+      create.intent = params.get('intent');
+      <!-- Input for the patient SSIN -->
+      create.patientSsin = params.get('ssin');
+    });
     <!-- Input for the language -->
     create.lang = navigator.language.includes('nl') || navigator.language.includes('fr') ? navigator.language : 'fr-BE';
-    create.intent = 'order';
-    <!-- Input for the patient SSIN -->
-    create.patientSsin = '43100101456';
     <!-- Callback method to get a token for the authentication library -->
     create.getToken = () => Promise.resolve(keycloak.token);
     <!-- Listener function to get feedback from the Web Component after the prescription has been successfully created -->
