--- a/index.html
+++ b/index.html
@@ -18,13 +18,9 @@
 <body>
 <script>
   const params = new URLSearchParams(window.location.search);
-  console.log('Using env : ', params.get('env'));
-  window.referralPrescriptionEnv = params.get('env');
-  var keycloak = new Keycloak({
-    url: 'https://api-acpt.ehealth.fgov.be/auth',
-    realm: 'healthcare',
-    clientId: 'nihdi-uhmep-hcp-dev'
-  });
+  window.referralPrescriptionEnv = getEnvFromHost(window.location.host);
+  console.log('Using env : ', window.referralPrescriptionEnv);
+  const keycloak = getKeycloakConfigurationForEnv(window.referralPrescriptionEnv);
   console.log('Document has been loaded');
   keycloak.init({onLoad: 'login-required', checkLoginIframe: false}).then(function (authenticated) {
     <!-- Initialization of the authentication library -->
@@ -52,6 +48,39 @@
   }).catch(function () {
     alert('failed to initialize');
   });
+
+  function getEnvFromHost(host) {
+    if (host.includes("referral-prescription.test.paas.vasdc.be")) {
+      return 'test';
+    } else if (host.includes("referral-prescription.int.ext.vascloud.be")) {
+      return 'int';
+    } else if (host.includes("wwwacc.referral-prescription.ehealth.fgov.be") ||
+      host.includes("extranet-acpt.referral-prescription.ehealth.fgov.be")) {
+      return 'acc';
+    }
+  }
+
+  function getKeycloakConfigurationForEnv(env) {
+    if (env === 'test') {
+      return new Keycloak({
+        url: 'http://vasiam.test.paas.vasdc.be/auth',
+        realm: 'MOOSE_UHMEP',
+        clientId: 'uhmep-webapp'
+      });
+    } else if (env === 'int') {
+      return new Keycloak({
+        url: 'https://api-acpt.ehealth.fgov.be/auth',
+        realm: 'healthcare',
+        clientId: 'nihdi-uhmep-hcp-dev'
+      });
+    } else if (env === 'acc') {
+      return new Keycloak({
+        url: 'https://api-acpt.ehealth.fgov.be/auth',
+        realm: 'healthcare',
+        clientId: 'nihdi-uhmep-hcp'
+      });
+    }
+  }
 </script>
 
 <!-- Web component script at the end -->
