update index.html to load evf-components

--- a/wc-create-prescription/src/index.html
+++ b/wc-create-prescription/src/index.html
@@ -35,5 +35,6 @@
     alert('failed to initialize');
   });
 </script>
+<script src="/assets/evf-form/evf-form.js" type="module"></script>
 </body>
 </html>
