--- a/wc-prescription-details/src/index.html
+++ b/wc-prescription-details/src/index.html
@@ -21,12 +21,15 @@
     console.log(authenticated ? 'authenticated' : 'not authenticated');
     const create = document.createElement('nihdi-referral-prescription-details');
     create.lang = navigator.language.includes('nl') || navigator.language.includes('fr') ? navigator.language : 'nl-BE';
-    create.prescriptionId = '4aeabaf9-7979-434e-b0d7-b31e1acab773';
+    create.prescriptionId = '13f22a72-8d73-4a76-bf21-4eb07ab1ab7d';
     create.getToken = () => Promise.resolve(keycloak.token);
     document.body.append(create);
   }).catch(function () {
     alert('failed to initialize');
   });
 </script>
+
+<script src="/assets/evf-form-details/evf-form-details.js" type="module"></script>
+<script src="/assets/pdfmake/pdfmake.js" type="module"></script>
 </body>
 </html>
