--- a/reuse/code/dialogs/reject-proposal/reject-proposal.dialog.html
+++ b/reuse/code/dialogs/reject-proposal/reject-proposal.dialog.html
@@ -16,7 +16,7 @@
   </div>
   <div mat-dialog-actions>
     <button color="accent" data-cy="dialog-confirm-button" type="submit"
-            mat-raised-button>{{'common.confirm' | translate}}</button>
+            mat-raised-button  [disabled]="formGroup.get('reason')?.invalid">{{'common.confirm' | translate}}</button>
     <button [mat-dialog-close]="undefined" data-cy="dialog-cancel-button" mat-flat-button
             type="button">{{'common.cancel' | translate}}</button>
   </div>
