--- a/reuse/code/dialogs/cancel-execution-prescription/cancel-execution-prescription.dialog.html
+++ b/reuse/code/dialogs/cancel-execution-prescription/cancel-execution-prescription.dialog.html
@@ -1,6 +1,13 @@
 <div class="wrapper">
   <h1 mat-dialog-title>{{'prescription.cancelExecution.title' | translate}}</h1>
   <div mat-dialog-content>
+    @if(errorCard.show){
+      <app-error-card
+        [message]="errorCard.message | translate : errorCard.translationOptions"
+        [error]="errorCard.errorResponse"
+        [showRetry]="false"
+      ></app-error-card>
+    }
     <div>{{'prescription.cancelExecution.message' | translate: {
         firstName: patient.firstName,
         lastName: patient.lastName,
