--- a/reuse/code/dialogs/finish-execution-prescription/finish-execution-prescription.dialog.html
+++ b/reuse/code/dialogs/finish-execution-prescription/finish-execution-prescription.dialog.html
@@ -1,6 +1,13 @@
 <form (ngSubmit)="finishExecution()" [formGroup]="formGroup">
   <h1 mat-dialog-title>{{'prescription.finishExecution.title' | translate}}</h1>
   <div mat-dialog-content>
+    @if(errorCard.show){
+      <app-error-card
+        [message]="errorCard.message | translate : errorCard.translationOptions"
+        [error]="errorCard.errorResponse"
+        [showRetry]="false"
+      ></app-error-card>
+    }
     <mat-form-field *ngIf="formGroup.get('endDate') as control" appearance="fill">
       <mat-label>{{ 'prescription.finishExecution.endDate' | translate }}</mat-label>
       <input [formControlName]="'endDate'" [matDatepicker]="picker" [max]="maxDate" [min]="minDate" matInput
