--- a/reuse/code/dialogs/start-execution-prescription/start-execution-prescription.dialog.html
+++ b/reuse/code/dialogs/start-execution-prescription/start-execution-prescription.dialog.html
@@ -1,6 +1,13 @@
 <form (ngSubmit)="startExecution()" [formGroup]="formGroup">
   <h1 mat-dialog-title>{{'prescription.startExecution.title' | translate}}</h1>
   <div mat-dialog-content>
+    @if(errorCard.show){
+      <app-error-card
+        [message]="errorCard.message | translate : errorCard.translationOptions"
+        [error]="errorCard.errorResponse"
+        [showRetry]="false"
+      ></app-error-card>
+    }
     @if (formGroup.get('startDate'); as control) {
       <mat-form-field appearance="fill">
         <mat-label>{{ 'prescription.startExecution.startDate' | translate }}</mat-label>
