--- a/reuse/code/dialogs/transfer-assignation/transfer-assignation.dialog.html
+++ b/reuse/code/dialogs/transfer-assignation/transfer-assignation.dialog.html
@@ -2,6 +2,13 @@
   <h1 mat-dialog-title>{{ 'prescription.transferAssignation.title' | translate }}</h1>
 
   <div mat-dialog-content>
+    @if(errorCard.show){
+      <app-error-card
+        [message]="errorCard.message | translate : errorCard.translationOptions"
+        [error]="errorCard.errorResponse"
+        [showRetry]="false"
+      ></app-error-card>
+    }
     <div>
       @if (formGroup.get('query')!; as control) {
         <mat-form-field appearance="fill">
