--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title>Testing the News Web Component</title>
   <base href="/">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="web-components/create-prescription/wc-create-prescription.css">
-  <script src="web-components/create-prescription/keycloak.js"></script>
+  <link rel="stylesheet" href="/dist/wc-prescription-details/build/wc-prescription-details.css">
+  <script src="/dist/wc-prescription-details/build/keycloak.js"></script>
   <style>
     body {
       font-family: Roboto, "Helvetica Neue", sans-serif;
@@ -21,18 +21,34 @@
   <!-- Setting the environment dynamically -->
   window.referralPrescriptionEnv = getEnvFromHost(window.location.host);
   const keycloak = getKeycloakConfigurationForEnv(window.referralPrescriptionEnv);
+  console.log(window.referralPrescriptionEnv)
+  console.log(keycloak)
   keycloak.init({onLoad: 'login-required', checkLoginIframe: false}).then(function (authenticated) {
     <!-- Initialization of the authentication library -->
     <!-- Creation of the custom element -->
-    const create = document.createElement('nihdi-referral-prescription-create');
-    <!-- Setting the intent input parameter -->
-    create.intent = params.get('intent') || 'order';  // By default, setting it as 'order'
-    <!-- Input for the patient SSIN -->
-    create.patientSsin = params.get('ssin');
-    <!-- Input for the language -->
-    create.lang = navigator.language.includes('nl') || navigator.language.includes('fr') ? navigator.language : 'fr-BE';
+    const create = document.createElement('nihdi-referral-prescription-details');
+    create.lang = navigator.language.includes('nl') || navigator.language.includes('fr') ? navigator.language : 'nl-BE';
+    create.prescriptionId = '720467cf-f6ee-4a99-a795-6d08ef961167';
+    // create.getToken = () => Promise.resolve(keycloak.token);
+    // document.body.append(create);
     <!-- Callback method to get a token for the authentication library -->
-    create.getToken = () => Promise.resolve(keycloak.token);
+    // await this.keycloak.updateToken(30);
+    // const accessToken = await this.keycloak.getToken()
+    // const idToken = this.keycloak.getKeycloakInstance().idTokenParsed
+    // return  {
+    //   accessToken,
+    //   idToken
+    // };
+    create.getToken = async () => {
+      await keycloak.updateToken(30);
+      console.log(keycloak)
+      const accessToken = keycloak.token
+      const idToken = () => Promise.resolve(keycloak.idTokenParsed)
+      return  {
+        accessToken,
+        idToken
+      };
+    }
     <!-- Listener function to get feedback from the Web Component after the prescription has been successfully created -->
     create.addEventListener('prescriptionsCreated', () => {
       document.body.removeChild(create);
@@ -56,10 +72,13 @@
     } else if (host.includes("wwwacc.referral-prescription.ehealth.fgov.be") ||
       host.includes("extranet-acpt.referral-prescription.ehealth.fgov.be")) {
       return 'acc';
+    }else if (host.includes("localhost")) {
+      return 'local';
     }
   }
 
   function getKeycloakConfigurationForEnv(env) {
+    console.log(env)
     if (env === 'test') {
       return new Keycloak({
         url: 'http://vasiam.test.paas.vasdc.be/auth',
@@ -78,11 +97,17 @@
         realm: 'healthcare',
         clientId: 'nihdi-uhmep-hcp'
       });
+    } else if (env === 'local') {
+      return new Keycloak( {
+        url: 'https://vasiam.test.ext.vascloud.be/auth',
+        realm: 'MOOSE_UHMEP',
+        clientId: 'uhmep-webapp'
+      });
     }
   }
 </script>
 
 <!-- Web component script at the end -->
-<script src="web-components/create-prescription/wc-create-prescription.js" type="module"></script>
+<script src="dist/wc-prescription-details/build/wc-prescription-details.js" type="module"></script>
 </body>
 </html>
