--- a/showcase/index.html
+++ b/showcase/index.html
@@ -7,7 +7,7 @@
   <title>Testing the News Web Component</title>
   <base href="/">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="web-components/create-prescription/wc-create-prescription.css">
+  <link rel="stylesheet" href="https://wwwacc.referral-prescription.in.ehealth.fgov.be/web-components/create-prescription/wc-create-prescription.css">
   <script src="web-components/create-prescription/keycloak.js"></script>
   <style>
     body {
@@ -55,6 +55,6 @@
 </script>
 
 <!-- Web component script at the end -->
-<script src="web-components/create-prescription/wc-create-prescription.js" type="module"></script>
+<script src="https://wwwacc.referral-prescription.in.ehealth.fgov.be/web-components/create-prescription/wc-create-prescription.js" type="module"></script>
 </body>
 </html>
