Added required Keycloack package (latest version 25 because version 26 does not work in this application).

--- a/showcase/index.html
+++ b/showcase/index.html
@@ -8,7 +8,10 @@
   <base href="/">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://wwwacc.referral-prescription.in.ehealth.fgov.be/web-components/create-prescription/wc-create-prescription.css">
-  <script src="web-components/create-prescription/keycloak.js"></script>
+  
+  <!-- Required packages -->
+  <script src="https://cdn.jsdelivr.net/npm/keycloak-js@25.0.6/dist/keycloak.min.js"></script>
+  
   <style>
     body {
       font-family: Roboto, "Helvetica Neue", sans-serif;
