--- a/wc-create-prescription/src/index.html
+++ b/wc-create-prescription/src/index.html
@@ -20,7 +20,7 @@
   keycloak.init({onLoad: 'login-required', checkLoginIframe: false}).then(function (authenticated) {
     console.log(authenticated ? 'authenticated' : 'not authenticated');
     const create = document.createElement('nihdi-referral-prescription-create');
-    create.lang = navigator.language.includes('nl') || navigator.language.includes('fr') ? navigator.language : 'nl-BE';
+    create.lang = navigator.language.includes('nl') ?? navigator.language.includes('fr') ? navigator.language : 'nl-BE';
     create.patientSsin = '43100101456';
     create.intent = 'intent';
     create.getToken = () => Promise.resolve(keycloak.token);
