--- a/wc-list-prescriptions/src/index.html
+++ b/wc-list-prescriptions/src/index.html
@@ -19,7 +19,7 @@
     keycloak.init({onLoad: 'login-required', checkLoginIframe: false}).then(function (authenticated) {
       console.log(authenticated ? 'authenticated' : 'not authenticated');
       const listElement = document.createElement('nihdi-referral-prescription-list');
-      listElement.lang = navigator.language.includes('nl') || navigator.language.includes('fr') ? navigator.language : 'nl-BE';
+      listElement.lang = navigator.language.includes('nl') ?? navigator.language.includes('fr') ? navigator.language : 'nl-BE';
       listElement.patientSsin = '90122712173';
       listElement.getToken = () => Promise.resolve(keycloak.token);
       listElement.addEventListener('prescriptionsCreated', () => {
