--- a/reuse/code/dialogs/confirm/confirm.dialog.html
+++ b/reuse/code/dialogs/confirm/confirm.dialog.html
@@ -19,7 +19,7 @@
   @if(cancelLabel){
   <button
     type="button"
-    mat-button
+    mat-stroked-button
     mat-dialog-close
   >{{cancelLabel! | translate: params}}</button>
   }
